@@ -3,4 +3,4 @@ name = Feedback
 description = Allows site visitors and users to report issues about this site.
 package = Development
 core = 7.x
-files[] = feedback.module
+files[] = tests/feedback.test
