@@ -2,6 +2,11 @@
 // $Id$
 
 /**
+ * @file
+ * Installation functions for Feedback module.
+ */
+
+/**
  * Implementation of hook_schema().
  */
 function feedback_schema() {
