@@ -1,0 +1,7 @@
+; $Id$
+name = Feedback testing
+description = Tests Feedback module functionality. Do not enable.
+core = 7.x
+package = Testing
+hidden = TRUE
+dependencies[] = feedback
