@@ -1,0 +1,8 @@
+<?php
+// $Id$
+
+/**
+ * @file
+ * Installation functionality for Feedback testing module.
+ */
+
