@@ -1,0 +1,8 @@
+<?php
+// $Id$
+
+/**
+ * @file
+ * Testing functionality for Feedback module.
+ */
+
